--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
     </div>
     <div>
         <h4>Exercicio5</h4><br>
-    <button class="button">enviar</button>
+            <button class="button">enviar</button>
+            <button disabled>Desativado</button>
     </div>
         <h4>Exercicio6</h4><br><br>
         <div meuNomeDeAtributo="1">Item 1</div>
